--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 .grid_container{
+	width: 400px;
+	height: 400px;
 	display: grid;
 	grid-template-columns: repeat(10, 1fr);
 	grid-template-rows: repeat(10, 1fr);
@@ -10,27 +12,41 @@
 }
 
 .grid_item_2{
-	grid-row: 5 / -1;
-	grid-column: 1 / 5;
+	grid-row: 1 / 6;
+	grid-column: 6 / 11;
+	width: 100%;
+    height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	background-color: blue;
 }
 
 .grid_item_3{
-	grid-row: 5 / -1;
-	grid-column: 6 / -1;
+	grid-row: 6 / 11;
+	grid-column: 6 / 11;
+	width: 100%;
+    height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	background-color: blue;
 }
 
 .flex_container{
+	grid-row: 1 / 11;
+	grid-column: 1 / 6;
+	width: 100%;
+    height: 100%;
 	display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: stretch;
+    justify-content: space-around;
+	align-items: center;
     background-color: purple;
 }
 
-.felx_item{
-	background-color: green;
+.flex_item{
 	color: red;
+	background-color: green;
 }
+
